chore: Update references and improve documentation consistency
- Updated paper references in CHANGELOG.md, CITATION.cff, README.md, and various notebooks to reflect the correct DOI links for the papers on Calibrated Explanations.
- Enhanced the clarity of the documentation by ensuring consistent citation formats across all relevant files.
- Made minor adjustments to improve the overall readability and accuracy of the documentation.

--- a/evaluation/Classification_plots.ipynb
+++ b/evaluation/Classification_plots.ipynb
@@ -11,7 +11,7 @@
     "Copyright 2023 Tuwe Löfström  \n",
     "License: BSD 3 clause\n",
     "Sources:\n",
-    "1. [\"Calibrated Explanations: with Uncertainty Information and Counterfactuals\"](https://arxiv.org/abs/2305.02305) by [Helena Löfström](https://github.com/Moffran), [Tuwe Löfström](https://github.com/tuvelofstrom), Ulf Johansson, and Cecilia Sönströd.\n",
+    "1. [\"Calibrated Explanations: with Uncertainty Information and Counterfactuals\"](https://doi.org/10.1016/j.eswa.2024.123154) by [Helena Löfström](https://github.com/Moffran), [Tuwe Löfström](https://github.com/tuvelofstrom), Ulf Johansson, and Cecilia Sönströd.\n",
     "\n",
     "### 1. Import packages, data and train an underlying model\n",
     "#### 1.1 Import packages\n",
