chore: v0.9.0 tasks 8 and 9 addressed
- Deleted legacy modules: `_interval_regressor.py`, `_plots.py`, `_plots_legacy.py`, and `_venn_abers.py` to streamline the codebase and eliminate deprecated functionality.
- Updated `codecov.yml` to remove references to deleted files, ensuring accurate coverage reporting.
- Adjusted docstring coverage badge in `README.md` to reflect the latest coverage report.
- Enhanced linting workflow to improve naming enforcement and notebook linting consistency.

--- a/notebooks/additional_notebooks/support_xgboost_lightgbm_catboost_issue_92.ipynb
+++ b/notebooks/additional_notebooks/support_xgboost_lightgbm_catboost_issue_92.ipynb
@@ -55,15 +55,15 @@
         "np.random.seed(42)\n",
         "\n",
         "def make_tiny_binary(n_samples=200, n_features=8, random_state=42):\n",
-        "    X, y = make_classification(\n",
+        "    features, labels = make_classification(\n",
         "        n_samples=n_samples,\n",
         "        n_features=n_features,\n",
         "        n_informative=max(2, n_features // 3),\n",
         "        n_redundant=0, n_repeated=0, n_classes=2, random_state=random_state\n",
         "    )\n",
-        "    X_tmp, X_test, y_tmp, y_test = train_test_split(X, y, test_size=0.2, random_state=random_state)\n",
-        "    X_train, X_cal, y_train, y_cal = train_test_split(X_tmp, y_tmp, test_size=0.25, random_state=random_state)  # 0.25 * 0.8 = 0.2\n",
-        "    return X_train, y_train, X_cal, y_cal, X_test, y_test\n"
+        "    tmp_features, test_features, tmp_labels, test_labels = train_test_split(features, labels, test_size=0.2, random_state=random_state)\n",
+        "    train_features, calibration_features, train_labels, calibration_labels = train_test_split(tmp_features, tmp_labels, test_size=0.25, random_state=random_state)  # 0.25 * 0.8 = 0.2\n",
+        "    return train_features, train_labels, calibration_features, calibration_labels, test_features, test_labels\n"
       ]
     },
     {
@@ -106,27 +106,27 @@
         "except Exception as e:\n",
         "    print('xgboost not available, skipping XGBoost demo:', e)\n",
         "else:\n",
-        "    X_train, y_train, X_cal, y_cal, X_test, y_test = make_tiny_binary()\n",
+        "    train_features, train_labels, calibration_features, calibration_labels, test_features, test_labels = make_tiny_binary()\n",
         "    clf = xgb.XGBClassifier(\n",
         "        n_estimators=25, max_depth=2, subsample=0.9, colsample_bytree=0.9,\n",
         "        learning_rate=0.2, tree_method='hist', verbosity=0, random_state=42\n",
         "    )\n",
-        "    clf.fit(X_train, y_train)\n",
+        "    clf.fit(train_features, train_labels)\n",
         "\n",
-        "    ce = CalibratedExplainer(clf, X_cal, y_cal, mode='classification')\n",
+        "    ce = CalibratedExplainer(clf, calibration_features, calibration_labels, mode='classification')\n",
         "\n",
         "    # Uncalibrated vs calibrated probabilities\n",
-        "    proba_uncal = ce.predict_proba(X_test, calibrated=False)\n",
-        "    proba_cal, (low, high) = ce.predict_proba(X_test, uq_interval=True)\n",
+        "    proba_uncal = ce.predict_proba(test_features, calibrated=False)\n",
+        "    proba_cal, (low, high) = ce.predict_proba(test_features, uq_interval=True)\n",
         "    print('XGBoost proba_uncal shape:', proba_uncal.shape)\n",
         "    print('XGBoost proba_cal shape:', proba_cal.shape)\n",
         "    print('XGBoost first 3 calibrated probs:', proba_cal[:3, 1])\n",
         "    print('XGBoost first 3 intervals:', list(zip(low[:3], high[:3])))\n",
         "\n",
-        "    y_hat, (y_low, y_high) = ce.predict(X_test, uq_interval=True)\n",
+        "    y_hat, (y_low, y_high) = ce.predict(test_features, uq_interval=True)\n",
         "    print('XGBoost first 10 calibrated predictions:', y_hat[:10])\n",
         "    \n",
-        "    factuals = ce.explain_factual(x=X_test[:3])\n",
+        "    factuals = ce.explain_factual(x=test_features[:3])\n",
         "    factuals[0].plot(uncertainty=True)\n"
       ]
     },
@@ -168,7 +168,7 @@
         }
       ],
       "source": [
-        "    alternatives = ce.explore_alternatives(x=X_test[:3])\n",
+        "    alternatives = ce.explore_alternatives(x=test_features[:3])\n",
         "    alternatives[0].plot(filter_top=3, rnk_metric=\"feature_weight\")\n",
         "    alternatives[0].plot(style=\"triangular\")\n",
         "    alternatives[0].add_conjunctions()\n",
@@ -310,23 +310,23 @@
         "except Exception as e:\n",
         "    print('lightgbm not available, skipping LightGBM demo:', e)\n",
         "else:\n",
-        "    X_train, y_train, X_cal, y_cal, X_test, y_test = make_tiny_binary()\n",
+        "    train_features, train_labels, calibration_features, calibration_labels, test_features, test_labels = make_tiny_binary()\n",
         "    clf = lgb.LGBMClassifier(\n",
         "        n_estimators=50, learning_rate=0.2, subsample=0.9, colsample_bytree=0.9, random_state=42\n",
         "    )\n",
-        "    clf.fit(X_train, y_train)\n",
+        "    clf.fit(train_features, train_labels)\n",
         "\n",
-        "    ce = CalibratedExplainer(clf, X_cal, y_cal, mode='classification')\n",
-        "    proba_uncal = ce.predict_proba(X_test, calibrated=False)\n",
-        "    proba_cal, (low, high) = ce.predict_proba(X_test, uq_interval=True)\n",
+        "    ce = CalibratedExplainer(clf, calibration_features, calibration_labels, mode='classification')\n",
+        "    proba_uncal = ce.predict_proba(test_features, calibrated=False)\n",
+        "    proba_cal, (low, high) = ce.predict_proba(test_features, uq_interval=True)\n",
         "    print('LightGBM proba_uncal shape:', proba_uncal.shape)\n",
         "    print('LightGBM first 3 calibrated probs:', proba_cal[:3, 1])\n",
         "    print('LightGBM first 3 intervals:', list(zip(low[:3], high[:3])))\n",
         "\n",
-        "    y_hat, (y_low, y_high) = ce.predict(X_test, uq_interval=True)\n",
+        "    y_hat, (y_low, y_high) = ce.predict(test_features, uq_interval=True)\n",
         "    print('LightGBM first 10 calibrated predictions:', y_hat[:10])\n",
         "    \n",
-        "    factuals = ce.explain_factual(x=X_test[:3])\n",
+        "    factuals = ce.explain_factual(x=test_features[:3])\n",
         "    factuals[0].plot(uncertainty=True)\n"
       ]
     },
@@ -786,7 +786,7 @@
         }
       ],
       "source": [
-        "    alternatives = ce.explore_alternatives(x=X_test[:3])\n",
+        "    alternatives = ce.explore_alternatives(x=test_features[:3])\n",
         "    alternatives[0].plot(filter_top=3, rnk_metric=\"feature_weight\")\n",
         "    alternatives[0].plot(style=\"triangular\")\n",
         "    alternatives[0].add_conjunctions()\n",
@@ -835,21 +835,21 @@
         "except Exception as e:\n",
         "    print('catboost not available, skipping CatBoost demo:', e)\n",
         "else:\n",
-        "    X_train, y_train, X_cal, y_cal, X_test, y_test = make_tiny_binary()\n",
+        "    train_features, train_labels, calibration_features, calibration_labels, test_features, test_labels = make_tiny_binary()\n",
         "    clf = cb.CatBoostClassifier(iterations=60, depth=4, learning_rate=0.2, loss_function='Logloss', verbose=False, random_seed=42)\n",
-        "    clf.fit(X_train, y_train)\n",
+        "    clf.fit(train_features, train_labels)\n",
         "\n",
-        "    ce = CalibratedExplainer(clf, X_cal, y_cal, mode='classification')\n",
-        "    proba_uncal = ce.predict_proba(X_test, calibrated=False)\n",
-        "    proba_cal, (low, high) = ce.predict_proba(X_test, uq_interval=True)\n",
+        "    ce = CalibratedExplainer(clf, calibration_features, calibration_labels, mode='classification')\n",
+        "    proba_uncal = ce.predict_proba(test_features, calibrated=False)\n",
+        "    proba_cal, (low, high) = ce.predict_proba(test_features, uq_interval=True)\n",
         "    print('CatBoost proba_uncal shape:', proba_uncal.shape)\n",
         "    print('CatBoost first 3 calibrated probs:', proba_cal[:3, 1])\n",
         "    print('CatBoost first 3 intervals:', list(zip(low[:3], high[:3])))\n",
         "\n",
-        "    y_hat, (y_low, y_high) = ce.predict(X_test, uq_interval=True)\n",
+        "    y_hat, (y_low, y_high) = ce.predict(test_features, uq_interval=True)\n",
         "    print('CatBoost first 10 calibrated predictions:', y_hat[:10])\n",
         "    \n",
-        "    factuals = ce.explain_factual(x=X_test[:3])\n",
+        "    factuals = ce.explain_factual(x=test_features[:3])\n",
         "    factuals[0].plot(uncertainty=True)\n"
       ]
     },
@@ -891,7 +891,7 @@
         }
       ],
       "source": [
-        "    alternatives = ce.explore_alternatives(x=X_test[:3])\n",
+        "    alternatives = ce.explore_alternatives(x=test_features[:3])\n",
         "    alternatives[0].plot(filter_top=3, rnk_metric=\"feature_weight\")\n",
         "    alternatives[0].plot(style=\"triangular\")\n",
         "    alternatives[0].add_conjunctions()\n",
