--- a/notebooks/demo_under_the_hood.ipynb
+++ b/notebooks/demo_under_the_hood.ipynb
@@ -63,12 +63,12 @@
    "source": [
     "# Load and preprocess the data\n",
     "num_to_test = 10 # number of instances to test, one from each class\n",
-    "dataSet = 'diabetes_full'\n",
+    "dataset = 'diabetes_full'\n",
     "delimiter = ','\n",
     "model = 'RF'\n",
     "\n",
-    "fileName = '../data/' + dataSet + \".csv\"\n",
-    "df = pd.read_csv(fileName, delimiter=delimiter)\n",
+    "filename = '../data/' + dataset + \".csv\"\n",
+    "df = pd.read_csv(filename, delimiter=delimiter)\n",
     "target = 'Y'\n",
     "X, y = df.drop(target,axis=1), df[target] \n",
     "no_of_classes = len(np.unique(y))\n",
