refactor(notebooks): Standardize code formatting and improve readability
- Updated various Jupyter notebooks to enhance code consistency, including uniform use of double quotes and improved indentation.
- Refactored code blocks for better readability, ensuring consistent spacing and line breaks.
- Added missing newlines at the end of files to comply with coding standards.
- Improved clarity in comments and print statements for better understanding of the code's functionality.

--- a/notebooks/additional_notebooks/imbalanced_wrap.ipynb
+++ b/notebooks/additional_notebooks/imbalanced_wrap.ipynb
@@ -42,28 +42,30 @@
     }
    ],
    "source": [
-    "from sklearn.datasets import fetch_openml\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "import numpy as np\n",
     "import ssl\n",
     "\n",
-    "if hasattr(ssl, '_create_unverified_context'):\n",
+    "import numpy as np\n",
+    "from sklearn.datasets import fetch_openml\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "if hasattr(ssl, \"_create_unverified_context\"):\n",
     "    ssl._create_default_https_context = ssl._create_unverified_context\n",
     "\n",
-    "dataset = fetch_openml(name=\"mammography\", version=1, as_frame=True, parser='auto')\n",
+    "dataset = fetch_openml(name=\"mammography\", version=1, as_frame=True, parser=\"auto\")\n",
     "\n",
     "X = dataset.data.values.astype(float)\n",
-    "y = (dataset.target.values == '1').astype(int)\n",
+    "y = (dataset.target.values == \"1\").astype(int)\n",
     "\n",
     "feature_names = dataset.feature_names\n",
     "\n",
-    "i_test = np.array([np.arange(len(y))[y==0][:4], np.arange(len(y))[y==1][:4]]).reshape(-1)\n",
+    "i_test = np.array([np.arange(len(y))[y == 0][:4], np.arange(len(y))[y == 1][:4]]).reshape(-1)\n",
     "i_train = np.setdiff1d(np.arange(len(y)), i_test)\n",
-    "X_train, y_train = X[i_train,:], y[i_train]\n",
-    "X_test, y_test = X[i_test,:], y[i_test]\n",
+    "X_train, y_train = X[i_train, :], y[i_train]\n",
+    "X_test, y_test = X[i_test, :], y[i_test]\n",
     "\n",
-    "X_prop_train, X_cal, y_prop_train, y_cal = train_test_split(X_train, y_train,\n",
-    "                                                            test_size=0.25,stratify=y_train)\n",
+    "X_prop_train, X_cal, y_prop_train, y_cal = train_test_split(\n",
+    "    X_train, y_train, test_size=0.25, stratify=y_train\n",
+    ")\n",
     "display(y_test)"
    ]
   },
@@ -89,8 +91,8 @@
     }
    ],
    "source": [
-    "print(f'number count of classes: {np.array(dataset.target.value_counts())}')\n",
-    "print(f'fraction of positive instances: {np.min(dataset.target.value_counts())/len(y)}')"
+    "print(f\"number count of classes: {np.array(dataset.target.value_counts())}\")\n",
+    "print(f\"fraction of positive instances: {np.min(dataset.target.value_counts())/len(y)}\")"
    ]
   },
   {
@@ -124,6 +126,7 @@
    ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
     "from calibrated_explanations import WrapCalibratedExplainer, __version__\n",
     "\n",
     "print(f\"calibrated_explanations {__version__}\")\n",
@@ -196,7 +199,7 @@
     }
    ],
    "source": [
-    "print(f'Uncalibrated probability estimates: \\n{classifier.predict_proba(X_test)}')"
+    "print(f\"Uncalibrated probability estimates: \\n{classifier.predict_proba(X_test)}\")"
    ]
   },
   {
@@ -259,9 +262,9 @@
    ],
    "source": [
     "proba, (low, high) = classifier.predict_proba(X_test, uq_interval=True)\n",
-    "print(f'Calibrated probability estimates: \\n{proba}')\n",
-    "print(f'Calibrated uncertainty interval for the positive class:')\n",
-    "print([(low[i], high[i]) for i in range(len(low))],end='\\n')"
+    "print(f\"Calibrated probability estimates: \\n{proba}\")\n",
+    "print(\"Calibrated uncertainty interval for the positive class:\")\n",
+    "print([(low[i], high[i]) for i in range(len(low))], end=\"\\n\")"
    ]
   },
   {
@@ -544,9 +547,9 @@
     }
    ],
    "source": [
-    "factual_explanations.add_conjunctions().plot(len(y_test)-1)\n",
-    "factual_explanations.plot(len(y_test)-1, uncertainty=True)\n",
-    "factual_explanations.remove_conjunctions().plot(len(y_test)-1, uncertainty=True)"
+    "factual_explanations.add_conjunctions().plot(len(y_test) - 1)\n",
+    "factual_explanations.plot(len(y_test) - 1, uncertainty=True)\n",
+    "factual_explanations.remove_conjunctions().plot(len(y_test) - 1, uncertainty=True)"
    ]
   },
   {
@@ -623,10 +626,10 @@
     }
    ],
    "source": [
-    "alternative_explanations.plot(len(y_test)-1)\n",
-    "alternative_explanations.add_conjunctions().plot(len(y_test)-1)\n",
+    "alternative_explanations.plot(len(y_test) - 1)\n",
+    "alternative_explanations.add_conjunctions().plot(len(y_test) - 1)\n",
     "\n",
-    "alternative_explanations.remove_conjunctions().plot(len(y_test)-1)"
+    "alternative_explanations.remove_conjunctions().plot(len(y_test) - 1)"
    ]
   },
   {
