--- a/notebooks/demo_under_the_hood.ipynb
+++ b/notebooks/demo_under_the_hood.ipynb
@@ -62,30 +62,37 @@
    "outputs": [],
    "source": [
     "# Load and preprocess the data\n",
-    "num_to_test = 10 # number of instances to test, one from each class\n",
-    "dataset = 'diabetes_full'\n",
-    "delimiter = ','\n",
-    "model = 'RF'\n",
+    "num_to_test = 10  # number of instances to test, one from each class\n",
+    "dataset = \"diabetes_full\"\n",
+    "delimiter = \",\"\n",
+    "model = \"RF\"\n",
     "\n",
-    "filename = '../data/' + dataset + \".csv\"\n",
+    "filename = \"../data/\" + dataset + \".csv\"\n",
     "df = pd.read_csv(filename, delimiter=delimiter)\n",
-    "target = 'Y'\n",
-    "X, y = df.drop(target,axis=1), df[target] \n",
+    "target = \"Y\"\n",
+    "X, y = df.drop(target, axis=1), df[target]\n",
     "no_of_classes = len(np.unique(y))\n",
     "no_of_features = X.shape[1]\n",
     "no_of_instances = X.shape[0]\n",
     "\n",
     "# find categorical features\n",
-    "categorical_features = [i for i in range(no_of_features) if len(np.unique(X.iloc[:,i])) < 10]\n",
+    "categorical_features = [i for i in range(no_of_features) if len(np.unique(X.iloc[:, i])) < 10]\n",
     "\n",
     "# select test instances from each class and split into train, cal and test\n",
     "idx = np.argsort(y.values).astype(int)\n",
-    "X, y = X.values[idx,:], y.values[idx]\n",
-    "test_index = np.array([*range(int(num_to_test/2)), *range(no_of_instances-1, no_of_instances-int(num_to_test/2)-1,-1)])\n",
-    "train_index = np.setdiff1d(np.array(range(no_of_instances)), test_index)   \n",
-    "X_train, X_test = X[train_index,:], X[test_index,:]\n",
+    "X, y = X.values[idx, :], y.values[idx]\n",
+    "test_index = np.array(\n",
+    "    [\n",
+    "        *range(int(num_to_test / 2)),\n",
+    "        *range(no_of_instances - 1, no_of_instances - int(num_to_test / 2) - 1, -1),\n",
+    "    ]\n",
+    ")\n",
+    "train_index = np.setdiff1d(np.array(range(no_of_instances)), test_index)\n",
+    "X_train, X_test = X[train_index, :], X[test_index, :]\n",
     "y_train, y_test = y[train_index], y[test_index]\n",
-    "X_prop_train, X_cal, y_prop_train, y_cal = train_test_split(X_train, y_train, test_size=0.33,random_state=42, stratify=y_train)\n"
+    "X_prop_train, X_cal, y_prop_train, y_cal = train_test_split(\n",
+    "    X_train, y_train, test_size=0.33, random_state=42, stratify=y_train\n",
+    ")"
    ]
   },
   {
@@ -97,14 +104,16 @@
     "# Train the model and create the explainer\n",
     "model = RandomForestClassifier()\n",
     "\n",
-    "model.fit(X_prop_train,y_prop_train)  \n",
+    "model.fit(X_prop_train, y_prop_train)\n",
     "\n",
-    "ce = CalibratedExplainer(model, \n",
-    "                        X_cal, \n",
-    "                        y_cal,\n",
-    "                        feature_names=df.columns,                    \n",
-    "                        categorical_features=categorical_features, \n",
-    "                        class_labels={0:'Non-diabetic',1:'Diabetic'})"
+    "ce = CalibratedExplainer(\n",
+    "    model,\n",
+    "    X_cal,\n",
+    "    y_cal,\n",
+    "    feature_names=df.columns,\n",
+    "    categorical_features=categorical_features,\n",
+    "    class_labels={0: \"Non-diabetic\", 1: \"Diabetic\"},\n",
+    ")"
    ]
   },
   {
@@ -142,9 +151,16 @@
    ],
    "source": [
     "factual_explanations = ce.explain_factual(X_test)\n",
-    "print('Probability [lower and upper bound] for Diabetic:')\n",
-    "print(*zip([f\"Instance {i}: {exp.prediction['predict']:.3f} [{exp.prediction['low']:5.3f}, {exp.prediction['high']:5.3f}]\" \\\n",
-    "    for i, exp in enumerate(factual_explanations)]), sep='\\n')"
+    "print(\"Probability [lower and upper bound] for Diabetic:\")\n",
+    "print(\n",
+    "    *zip(\n",
+    "        [\n",
+    "            f\"Instance {i}: {exp.prediction['predict']:.3f} [{exp.prediction['low']:5.3f}, {exp.prediction['high']:5.3f}]\"\n",
+    "            for i, exp in enumerate(factual_explanations)\n",
+    "        ]\n",
+    "    ),\n",
+    "    sep=\"\\n\",\n",
+    ")"
    ]
   },
   {
@@ -202,11 +218,17 @@
     "factual = factual_explanation._get_rules()\n",
     "\n",
     "print(\"Calibrated prediction with uncertainty interval:\")\n",
-    "print(f\"{factual['base_predict'][0]:5.3f} [{factual['base_predict_low'][0]:5.3f}, {factual['base_predict_high'][0]:5.3f}]\")\n",
+    "print(\n",
+    "    f\"{factual['base_predict'][0]:5.3f} [{factual['base_predict_low'][0]:5.3f}, {factual['base_predict_high'][0]:5.3f}]\"\n",
+    ")\n",
     "\n",
-    "print(\"\\nInstance value and factual feature rules, each composed of a factual condition and a feature weight with an uncertainty interval:\") \n",
-    "for f, rule in enumerate(factual['rule']):\n",
-    "    print(f\"{factual['value'][f]:6}: {rule:40s} {factual['weight'][f]:>6.3f} [{factual['weight_low'][f]:>6.3f}, {factual['weight_high'][f]:>6.3f}]\")\n",
+    "print(\n",
+    "    \"\\nInstance value and factual feature rules, each composed of a factual condition and a feature weight with an uncertainty interval:\"\n",
+    ")\n",
+    "for f, rule in enumerate(factual[\"rule\"]):\n",
+    "    print(\n",
+    "        f\"{factual['value'][f]:6}: {rule:40s} {factual['weight'][f]:>6.3f} [{factual['weight_low'][f]:>6.3f}, {factual['weight_high'][f]:>6.3f}]\"\n",
+    "    )\n",
     "\n",
     "factual_explanation.plot(uncertainty=True)"
    ]
@@ -280,11 +302,15 @@
    ],
    "source": [
     "print(\"Calibrated prediction with uncertainty interval:\")\n",
-    "print(f\"{alternative['base_predict'][0]:5.3f} [{alternative['base_predict_low'][0]:5.3f}, {alternative['base_predict_high'][0]:5.3f}]\")\n",
+    "print(\n",
+    "    f\"{alternative['base_predict'][0]:5.3f} [{alternative['base_predict_low'][0]:5.3f}, {alternative['base_predict_high'][0]:5.3f}]\"\n",
+    ")\n",
     "\n",
-    "print(\"\\nInstance value and factual condition with probability and uncertainty interval:\") \n",
-    "for f, rule in enumerate(alternative['rule']):\n",
-    "    print(f\"{alternative['value'][f]:6}: {rule:40s} {alternative['predict'][f]:>6.3f} [{alternative['predict_low'][f]:>6.3f}, {alternative['predict_high'][f]:>6.3f}]\")\n",
+    "print(\"\\nInstance value and factual condition with probability and uncertainty interval:\")\n",
+    "for f, rule in enumerate(alternative[\"rule\"]):\n",
+    "    print(\n",
+    "        f\"{alternative['value'][f]:6}: {rule:40s} {alternative['predict'][f]:>6.3f} [{alternative['predict_low'][f]:>6.3f}, {alternative['predict_high'][f]:>6.3f}]\"\n",
+    "    )\n",
     "\n",
     "alternative_explanation.plot()"
    ]
@@ -360,17 +386,21 @@
     }
    ],
    "source": [
-    "factual_explanation.add_conjunctions() \n",
+    "factual_explanation.add_conjunctions()\n",
     "conjunctive = factual_explanation._get_rules()\n",
     "\n",
     "print(\"Calibrated prediction with uncertainty interval:\")\n",
-    "print(f\"{conjunctive['base_predict'][0]:5.3f} [{conjunctive['base_predict_low'][0]:5.3f}, {conjunctive['base_predict_high'][0]:5.3f}]\")\n",
+    "print(\n",
+    "    f\"{conjunctive['base_predict'][0]:5.3f} [{conjunctive['base_predict_low'][0]:5.3f}, {conjunctive['base_predict_high'][0]:5.3f}]\"\n",
+    ")\n",
     "\n",
     "print(\"\\nConjunctive rules with feature weights and uncertainty intervals:\")\n",
-    "for f, rule in enumerate(conjunctive['rule']):\n",
-    "    rule = rule.replace('\\n', '')\n",
-    "    print(f\"{rule:60s} {conjunctive['weight'][f]:>6.3f} [{conjunctive['weight_low'][f]:>6.3f}, {conjunctive['weight_high'][f]:>6.3f}]\")\n",
-    "    \n",
+    "for f, rule in enumerate(conjunctive[\"rule\"]):\n",
+    "    rule = rule.replace(\"\\n\", \"\")\n",
+    "    print(\n",
+    "        f\"{rule:60s} {conjunctive['weight'][f]:>6.3f} [{conjunctive['weight_low'][f]:>6.3f}, {conjunctive['weight_high'][f]:>6.3f}]\"\n",
+    "    )\n",
+    "\n",
     "factual_explanation.plot(uncertainty=True)\n",
     "factual_explanation.remove_conjunctions()"
    ]
@@ -439,17 +469,21 @@
     }
    ],
    "source": [
-    "alternative_explanation.add_conjunctions() \n",
+    "alternative_explanation.add_conjunctions()\n",
     "conjunctive = alternative_explanation._get_rules()\n",
     "\n",
     "print(\"Calibrated prediction with uncertainty interval:\")\n",
-    "print(f\"{conjunctive['base_predict'][0]:5.3f} [{conjunctive['base_predict_low'][0]:5.3f}, {conjunctive['base_predict_high'][0]:5.3f}]\")\n",
+    "print(\n",
+    "    f\"{conjunctive['base_predict'][0]:5.3f} [{conjunctive['base_predict_low'][0]:5.3f}, {conjunctive['base_predict_high'][0]:5.3f}]\"\n",
+    ")\n",
     "\n",
     "print(\"\\nConjunctive rules with feature weights and uncertainty intervals:\")\n",
-    "for f, rule in enumerate(conjunctive['rule']):\n",
-    "    rule = rule.replace('\\n', ' ')\n",
-    "    print(f\"{rule:60s} {conjunctive['predict'][f]:>6.3f} [{conjunctive['predict_low'][f]:>6.3f}, {conjunctive['predict_high'][f]:>6.3f}]\")\n",
-    "    \n",
+    "for f, rule in enumerate(conjunctive[\"rule\"]):\n",
+    "    rule = rule.replace(\"\\n\", \" \")\n",
+    "    print(\n",
+    "        f\"{rule:60s} {conjunctive['predict'][f]:>6.3f} [{conjunctive['predict_low'][f]:>6.3f}, {conjunctive['predict_high'][f]:>6.3f}]\"\n",
+    "    )\n",
+    "\n",
     "alternative_explanation.plot()\n",
     "alternative_explanation.remove_conjunctions()"
    ]
